# bastion

./: .gitignore  COMPLETE_USER_GUIDE.md  PROJECT_STATE.md  README.md  bastion  bastion-cli.sh  install.sh
amm_contract/: Cargo.toml  Makefile  README.md  rust-toolchain
amm_contract/src/: lib.rs
bastion_contract/: Cargo.toml
bastion_contract/src/: lib.rs
cep18/: Cargo.toml  Makefile
cep18/.github/workflows/: ci-casper-client.yml  ci-casper-contract.yml  nightly-scheduled-test.yml  publish-contract.yml  publish-js-client.yml
cep18/client-js/: .gitignore  .npmignore  CHANGELOG.md  README.md  config.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
cep18/client-js/examples/: events.ts  install.ts  upgrade.ts  usage.ts
cep18/client-js/src/: CEP18Client.ts  client.ts  error.ts  events.ts  index.ts  types.ts
cep18/client-js/src/scripts/: copy-and-convert-wasms.ts
cep18/client-js/tests/: utils.ts
cep18/client-js/tests/e2e/: events.test.ts  helpers.ts  install.test.ts  upgrade.test.ts  usage.test.ts
cep18/client-js/tests/unit/: CEP18Client.test.ts  Client.test.ts
cep18/contracts/contract/: Cargo.toml  README.md
cep18/contracts/contract/src/: allowances.rs  balances.rs  entry_points.rs  error.rs  events.rs  lib.rs  main.rs  modalities.rs  security.rs  utils.rs
cep18/contracts/test-contract/: Cargo.toml
cep18/contracts/test-contract/src/: constants.rs  main.rs
cep18/cost-benchmarking/: README.md  prepare.sh  run-benchmarks.sh
cep18/docs/: 1-quickstart-guide.md  3-transfer.md  4-tests.md  full-tutorial.md
cep18/tests/: Cargo.toml
cep18/tests/fixtures/cep18-1.5.6-minted/: state.json
cep18/tests/fixtures/cep18-1.5.6-minted/global_state/: data.lmdb  data.lmdb-lock
cep18/tests/src/: allowance.rs  events.rs  fixture_gen.rs  install.rs  lib.rs  migration.rs  mint_and_burn.rs  transfer.rs  upgrade.rs
cep18/tests/src/utility/: constants.rs  installer_request_builders.rs  message_handlers.rs  mod.rs  support.rs
cli/: bastion
cli/config/: contracts.env
cli/lib/: arbitrage.sh  identity.sh  ledger.sh  liquidity.sh  network.sh  simulation.sh  ticker.sh  ui.sh  whale.sh  zkproof.sh
landing-page/: ROOK_ANIMATION.md  index.html  package-lock.json  package.json  tailwind.config.js
landing-page/src/: App.css  App.jsx  index.css
landing-page/src/components/: ChessBoard.jsx  FeatureVisuals.jsx  InstallSnippet.css  InstallSnippet.jsx  ProceduralRook.jsx  RookScene.jsx  TerminalBlock.jsx
landing-page/src/components/layout/: SmoothScroll.jsx
landing-page/src/components/ui/: CustomCursor.jsx  Marquee.jsx  NoiseOverlay.jsx
