[package]
name = "bastion-contract"
version = "1.0.0"
edition = "2021"

[dependencies]
casper-contract = { version = "5.1.1", default-features = false, features = ["no-std-helpers"] }
casper-types = { version = "6.1.0", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
