[workspace]
members = ["contracts/contract", "contracts/test-contract", "tests"]
default-members = ["contracts/contract", "tests"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
description = "A library for developing CEP-18 tokens for the Casper network."
readme = "README.md"
documentation = "https://docs.rs/casper-cep18"
homepage = "https://github.com/casper-ecosystem"
repository = "https://github.com/casper-ecosystem/cep18"
license-file = "LICENSE"

[workspace.dependencies]
casper-contract = { version = "5", default-features = false }
casper-types = { version = "6", default-features = false }
casper-event-standard = { version = "0.7.0", default-features = false }

[profile.release]
codegen-units = 1
lto = true
