[package]
name = "tests"
version.workspace = true
edition.workspace = true

[lib]
name = "tests"
bench = false
doctest = false

[[bin]]
name = "fixture_gen"
path = "src/fixture_gen.rs"
bench = false
doctest = false

[dependencies]
once_cell = "*"
cep18 = { path = "../contracts/contract", default-features = false }
cep18-test-contract = { path = "../contracts/test-contract", default-features = false }
casper-types.workspace = true
casper-fixtures = { git = "https://github.com/casper-network/casper-fixtures", branch = "feat-2.0", default-features = false }
casper-engine-test-support = { version = "8.1.0", default-features = false }
casper-execution-engine = { version = "8.1.0", default-features = false }
casper-event-standard.workspace = true
